clusters/proxmox-home/apps/pocket-id/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: pocket-id
  name: pocket-id-ingress-tls
  labels:
    app.kubernetes.io/name: pocket-id-ingress-tls
    app.kubernetes.io/component: ingress
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - pocket-id.mgsds.com
  rules:
    - host: pocket-id.mgsds.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pocket-id
                port:
                  number: 80
